--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-typical": "^0.1.3",
     "rxjs": "^7.8.1",
     "web-vitals": "^2.1.4"
